<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_payment_options"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="maganacode.payvide.PaymentOptions">

    <!-- Name Label -->
    <TextView
        android:id="@+id/name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:labelFor="@+id/name_field"
        android:text="@string/payment_name_text"
        android:textSize="18sp"/>

    <!-- Cost Label -->
    <TextView
        android:id="@+id/cost_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/name_field"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:labelFor="@+id/cost_field"
        android:text="@string/payment_cost_text"
        android:textSize="18sp"/>

    <!-- Color Label -->
    <TextView
        android:id="@+id/color_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cost_label"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/payment_color_text"
        android:textSize="18sp"/>

    <!-- Recurrence Label -->
    <TextView
        android:id="@+id/recurrence_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/color_label"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/payment_recurrence_text"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/divisors_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/recurrence_label"
        android:layout_marginTop="20dp"
        android:background="@color/aluminum"
        android:text="@string/divisors_percent_text"
        android:textAlignment="center"
        android:textSize="25sp"/>

    <!-- Name Field -->
    <EditText
        android:id="@+id/name_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/name_label"
        android:inputType="text"/>

    <!-- Cost Field -->
    <EditText
        android:id="@+id/cost_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/name_field"
        android:layout_below="@+id/name_field"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:inputType="text"/>

    <!-- Color Button -->
    <Button
        android:id="@+id/color_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignTop="@+id/color_label"
        android:layout_alignStart="@+id/cost_field"/>

    <!-- Recurrence Spinner -->
    <Spinner
        android:id="@+id/recurrence_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/recurrence_label"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/recurrence_label"
        android:prompt="@string/spinner_title">
    </Spinner>
</RelativeLayout>
