<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:design="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_dashboard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="maganacode.payvide.DashboardActivity">

    <!-- Toolbar top -->
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:titleTextColor="#ffffff">

    </include>

    <Button
        android:id="@+id/dashButton"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@color/primary_darker"
        android:text="@string/dash_btn_text"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/payment_date_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:text="@string/dashboard_text"
        android:textColor="@color/white"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/dashButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="21dp"
        android:fontFamily="sans-serif"
        android:text="@string/dash_text"
        android:textColor="@color/primary_darker"/>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottom_naviation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        design:menu="@menu/bottom_navigation_menu">
    </android.support.design.widget.BottomNavigationView>
</RelativeLayout>
