<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/primary"
        android:elevation="5dp"
        app:cardBackgroundColor="@color/bpTransparent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@drawable/selector_row"
            android:clickable="true"
            android:orientation="horizontal"
            android:weightSum="1">

            <!-- Percentage -->
            <TextView
                android:id="@+id/percent_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="15dp"
                android:text="@string/percent_text"
                android:textColor="@color/primary"
                android:textSize="15sp"/>

            <!-- Name -->
            <TextView
                android:id="@+id/name_view_members"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/name_card_text"
                android:textSize="18sp"/>

            <!-- Username -->
            <TextView
                android:id="@+id/username_view_members"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/name_view_members"
                android:layout_below="@+id/name_view_members"
                android:layout_gravity="center"
                android:text="@string/username_card_text"
                android:textColor="@color/primary"
                android:textSize="12sp"/>

            <SeekBar
                android:id="@+id/percent_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/percent_text"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="75dp"
                android:layout_toEndOf="@+id/username_view_members"
                android:layout_toStartOf="@+id/percent_text"/>

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>